encouraged to add entries for their work.

All changes can be found via git - eg, for all changes after a build:
    git log -rb3xx:
or
    https://github.com/mhammond/pywin32/compare/b3xx...main

As of build 305, installation .exe files have been deprecated; see
https://mhammond.github.io/pywin32_installers.html.

Coming in build 308, as yet unreleased
--------------------------------------

* Fixed a circular import between `win32comext.axscript.client.framework` and `win32comext.axscript.client.error` (#2381, @Avasam)
* Remove long-deprecated `win32com.server.dispatcher.DispatcherWin32dbg` (#2382, @Avasam)

Build 307, released 2024-10-04
------------------------------
### Release process changes

pywin32 is now released from artifacts created by Github actions, whereas previously they were
created from an environment where certain tools and libraries were located and installed
by hand.

This means some capabilities are no longer provided - this includes some documentation artifacts, such
as the .chm file, certain MAPI libraries etc, and .exe installers.

### pywin32
* Remove obsolete and unused `pywin.is_platform_unicode` (#2343, @Avasam)
* Fix `isapi.ThreadPoolExtension`'s printing of exception traceback broken on Python 3.8+ (#2312, @Avasam)
* Add RealGetWindowClass (#2299, @CristiFati)
* Make it compile on Python 3.13 (#2260, @clin1234)
* Fixed accidentally trying to raise a `str` instead of an `Exception` in (#2270, @Avasam)
  * `Pythonwin/pywin/debugger/debugger.py`
  * `Pythonwin/pywin/framework/dlgappcore.py`
  * `com/win32com/server/policy.py`
  * `win32/Lib/regutil.py`
  * `win32/scripts/VersionStamp/vssutil.py`
* Removed the following unused symbols. They were meant to be used as Exceptions, but were accidentally strings (#2270, #2269, @Avasam)
  * `pywin.debugger.debugger.error`
  * `pywin.framework.dlgappcore.error`
  * `win32com.server.policy.error`
  * `regutil.error`
  * `win32.scripts.VersionStamp.vssutil.error`
  * `win32com.universal.com_error`