@@ -48,11 +48,10 @@ exclude = (?x)(
 [mypy-adsi.*,dde,exchange,mapi,perfmon,servicemanager,win32api,win32console,win32clipboard,win32comext.adsi.adsi,win32event,win32evtlog,win32file,win32gui,win32help,win32pdh,win32process,win32ras,win32security,win32service,win32trace,win32ui,win32uiole,win32wnet,_win32sysloader,_winxptheme]
 ignore_missing_imports = True
 
-; verstamp is installed from win32verstamp.py called in setup.py
 ; Most of win32com re-exports win32comext
 ; Test is a local untyped module in win32comext.axdebug
 ; pywin32_system32 is an empty module created in setup.py to store dlls
-[mypy-verstamp,win32com.*,Test,pywin32_system32]
+[mypy-win32com.*,Test,pywin32_system32]
 ignore_missing_imports = True
 
 ; Distutils being removed from stdlib currently causes some issues on Python 3.12
