@@ -33,11 +33,15 @@
 import fnmatch
 import os
 import sys
+from collections.abc import Mapping
+from optparse import Values
 
-import verstamp
-import win32api
-
-numStamped = 0
+try:
+    import win32verstamp
+except ModuleNotFoundError:
+    # If run with pywin32 not already installed
+    sys.path.append(os.path.abspath(__file__ + "/../../../Lib"))
+    import win32verstamp
 
 g_patterns = [
     "*.dll",
@@ -47,9 +51,9 @@ g_patterns = [
 ]
 
 
-def walk(arg, dirname, names):
-    global numStamped
-    vars, debug, descriptions = arg
+def walk(vars: Mapping[str, str], debug, descriptions, dirname, names) -> int:
+    """Returns the number of stamped files."""
+    numStamped = 0
     for name in names:
         for pat in g_patterns:
             if fnmatch.fnmatch(name, pat):
@@ -60,11 +64,14 @@ def walk(arg, dirname, names):
                     name = base[:-2] + ext
                 is_dll = ext.lower() != ".exe"
                 if os.path.normcase(name) in descriptions:
-                    desc = descriptions[os.path.normcase(name)]
+                    description = descriptions[os.path.normcase(name)]
                     try:
-                        verstamp.stamp(vars, pathname, desc, is_dll=is_dll)
+                        options = Values(
+                            {**vars, "description": description, "dll": is_dll}
+                        )
+                        win32verstamp.stamp(pathname, options)
                         numStamped += 1
-                    except win32api.error as exc:
+                    except OSError as exc:
                         print(
                             "Could not stamp",
                             pathname,
@@ -76,13 +83,14 @@ def walk(arg, dirname, names):
                 else:
                     print("WARNING: description not provided for:", name)
                     # skip branding this - assume already branded or handled elsewhere
+    return numStamped
 
 
 # print("Stamped", pathname)
 
 
 def load_descriptions(fname, vars):
-    retvars = {}
+    retvars: dict[str, str] = {}
     descriptions = {}
 
     lines = open(fname, "r").readlines()
@@ -118,9 +126,7 @@ def load_descriptions(fname, vars):
     return retvars, descriptions
 
 
-def scan(build, root, desc, **custom_vars):
-    global numStamped
-    numStamped = 0
+def scan(build, root: str, desc, **custom_vars):
     try:
         build = int(build)
     except ValueError:
@@ -135,10 +141,11 @@ def scan(build, root, desc, **custom_vars):
     vars["build"] = build
     vars.update(custom_vars)
 
-    arg = vars, debug, descriptions
-    os.path.walk(root, walk, arg)
+    numStamped = 0
+    for directory, dirnames, filenames in os.walk(root):
+        numStamped += walk(vars, debug, descriptions, directory, filenames)
 
-    print("Stamped %d files." % (numStamped))
+    print(f"Stamped {numStamped} files.")
 
 
 if __name__ == "__main__":
@@ -146,4 +153,4 @@ if __name__ == "__main__":
         print("ERROR: incorrect invocation. See script's header comments.")
         sys.exit(1)
 
-    scan(*tuple(sys.argv[1:]))
+    scan(*sys.argv[1:])
